--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,7 +118,7 @@ jobs:
             git commit -m "Update site"
             git push origin HEAD:${{ github.ref_name }} || { echo "Failed to push changes"; exit 1; }
           else
-            ls -l ./public/files/api/ || { echo "Error reading ./public/files/api/" }
+            ls -l ./public/files/api/ || { echo "Error reading ./public/files/api/"; }
             git status
             echo "No changes detected"
           fi
