--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,12 +113,10 @@ jobs:
         run: |
           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/food-hygiene-uk/data.git
 
-          if ! git diff --quiet; then
+          if ! git diff --quiet || ! git ls-files --others --exclude-standard --quiet; then
             git add .
             git commit -m "Update site"
             git push origin HEAD:${{ github.ref_name }} || { echo "Failed to push changes"; exit 1; }
           else
-            ls -l ./public/files/api/ || { echo "Error reading ./public/files/api/"; }
-            git status
             echo "No changes detected"
           fi
