Add index files to page output; add tooling for code validation.
feat: Add package.json and configure cssnano for CSS optimization

feat: Extend Renovate configuration with custom managers for Deno and GitHub releases

feat: Implement script to update Deno version in .deno-version and devcontainer.json

feat: Enhance site generation by integrating API index and open data files index

feat: Create CSS processing utility with postcss and cssnano integration

feat: Add Zod utility functions for constructing literal union types with validation

test: Add unit tests for Zod utility functions to ensure correct behavior

feat: Create API index page with dynamic content generation and styling

feat: Implement directory index generation for open data files

fix: Refactor ratings API to improve fetch initialization and response handling

chore: Add Stylelint configuration for enforcing CSS naming conventions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,9 +2,7 @@
   "name": "Deno Dev Container",
   "build": {
     "dockerfile": "Dockerfile",
-    "options": [
-      "--build-arg=DENO_VERSION=2.1.9"
-    ]
+    "options": ["--build-arg=DENO_VERSION=2.3.5"]
   },
   "postCreateCommand": "deno cache src/generate-site.mts",
   "customizations": {
@@ -17,9 +15,14 @@
       },
       "extensions": [
         "denoland.vscode-deno",
+        "EditorConfig.EditorConfig",
+        "esbenp.prettier-vscode",
         "github.vscode-github-actions",
         "ms-azuretools.vscode-docker",
+        "ms-playwright.playwright",
         "ms-vscode.live-server",
+        "oscarotero.vento-syntax",
+        "stylelint.vscode-stylelint",
         "yuyinws.vscode-array-index"
       ]
     }
