--- a/deno.json
+++ b/deno.json
@@ -1,17 +1,98 @@
 {
   "imports": {
-    "@std/fs": "jsr:@std/fs@^1.0.11",
-    "@std/path": "jsr:@std/path@^1.0.8",
-    "zod": "npm:zod@^3.24.1"
+    "@playwright/test": "npm:@playwright/test@1.52.0",
+    "@std/assert": "jsr:@std/assert@1.0.13",
+    "@std/fs": "jsr:@std/fs@1.0.17",
+    "@std/path": "jsr:@std/path@1.1.0",
+    "@std/testing": "jsr:@std/testing@1.0.13",
+    "@typescript-eslint/eslint-plugin": "npm:@typescript-eslint/eslint-plugin@8.32.1",
+    "@typescript-eslint/parser": "npm:@typescript-eslint/parser@8.32.1",
+    "@vento/vento": "jsr:@vento/vento@1.12.16",
+    "components/": "./src/components/",
+    "cssnano-preset-advanced": "npm:cssnano-preset-advanced@7.0.7",
+    "cssnano": "npm:cssnano@7.0.7",
+    "eslint-config-prettier": "npm:eslint-config-prettier@10.1.5",
+    "eslint-plugin-import": "npm:eslint-plugin-import@2.31.0",
+    "eslint-plugin-jsdoc": "npm:eslint-plugin-jsdoc@50.6.17",
+    "eslint-plugin-promise": "npm:eslint-plugin-promise@7.2.1",
+    "eslint-plugin-unicorn": "npm:eslint-plugin-unicorn@59.0.1",
+    "eslint": "npm:eslint@9.27.0",
+    "fast-check": "npm:fast-check@4.1.1",
+    "http-server": "npm:http-server@14.1.1",
+    "jiti": "npm:jiti@2.4.2",
+    "playwright": "npm:playwright@1.52.0",
+    "postcss": "npm:postcss@8.5.3",
+    "prettier": "npm:prettier@3.5.3",
+    "scripts/": "./src/scripts/",
+    "stylelint-config-standard": "npm:stylelint-config-standard@38.0.0",
+    "stylelint": "npm:stylelint@16.19.1",
+    "uglify-js": "npm:uglify-js@3.19.3",
+    "zod": "npm:zod@3.25.30"
   },
   "tasks": {
-    "pre-commit": {
-      "description": "Updates and validadates the code as done in CI",
-      "command": "deno fmt && deno lint && deno check src/generate-site.mts"
-    },
     "build": {
       "description": "Builds the site",
-      "command": "deno run --allow-env=CI --allow-net=api.ratings.food.gov.uk:443,ratings.food.gov.uk:443 --allow-read=./build,./dist,./ --allow-write=./build,./dist src/generate-site.mts"
+      "command": "BROWSERSLIST_ROOT_PATH=. deno run --allow-env=CI,BROWSERSLIST,BROWSERSLIST_CONFIG,BROWSERSLIST_DISABLE_CACHE,BROWSERSLIST_IGNORE_OLD_DATA,BROWSERSLIST_ROOT_PATH,BROWSERSLIST_STATS,NODE_ENV,TERM,UGLIFY_BUG_REPORT --deny-env=NO_COLOR,FORCE_COLOR,BROWSERSLIST_ENV --allow-net=api.ratings.food.gov.uk:443,ratings.food.gov.uk:443 --allow-read=./,./assets,./build,./dist,./src --allow-write=./build,./dist --allow-sys=homedir,uid src/generate-site.mts"
+    },
+    "deno:lock-update": {
+      "description": "Updates the lock file",
+      "command": "deno install && deno cache --frozen=false src/generate-site.mts && deno install"
+    },
+    "deno:update-dependencies": {
+      "description": "Updates Deno dependencies",
+      "command": "deno outdated && deno outdated --update --latest"
+    },
+    "eslint:check": {
+      "description": "Runs ESLint on the codebase",
+      "command": "deno run --allow-env --allow-read --allow-write=./.eslintcache --allow-sys=cpus,homedir npm:eslint ."
+    },
+    "git:pre-commit": {
+      "description": "Updates and validadates the code as done in CI",
+      "command": "deno install && deno task deno:lock-update && deno task prettier:debug-check && deno task prettier:write && deno task stylelint:fix && deno fmt && deno test && deno lint && deno task eslint:check && deno task stylelint:check && deno check src/generate-site.mts"
+    },
+    "playwright:install": {
+      "description": "Installs Playwright dependencies",
+      "command": "deno run --allow-env --allow-read=/proc/version,../node_modules,/node_modules,/etc/os-release,/home/node/.cache/ms-playwright,/home/runner/.cache/ms-playwright,$(which deno),/tmp/,/ms-playwright/.docker-info --allow-write=/home/node/.cache/ms-playwright,/home/runner/.cache/ms-playwright,/tmp/ --allow-run=$(which deno),/sbin/ldconfig,which,sudo --allow-sys=osRelease,homedir,uid npm:playwright install --with-deps"
+    },
+    "playwright:show-report": {
+      "description": "Shows the Playwright report",
+      "command": "deno run --allow-env --allow-read=/proc/version,/etc/os-release,../node_modules,/node_modules,./,$(which deno) --allow-net=127.0.0.1:9323 --allow-run=./node_modules/.deno/playwright-core@1.52.0/node_modules/playwright-core/lib/utilsBundleImpl/xdg-open --allow-sys=osRelease,homedir,uid npm:playwright show-report"
+    },
+    "playwright:test": {
+      "description": "Runs Playwright tests",
+      "command": "deno task playwright:install && deno run --allow-env --allow-net=\"localhost,[::1]:8080,127.0.0.1:8080,127.0.0.1:9323\" --allow-read=./,/node_modules/,../node_modules,/proc/version,/etc/os-release,/tmp/,../tsconfig.json,../../tsconfig.json,../../../tsconfig.json,../../../../tsconfig.json,../../../../../tsconfig.json,../../../../../../tsconfig.json,../../../../../../../tsconfig.json,../jsconfig.json,../../jsconfig.json,../../../jsconfig.json,../../../../jsconfig.json,../../../../../jsconfig.json,../../../../../../jsconfig.json,../../../../../../../jsconfig.json,$(which deno) --allow-write=./test-results/,./playwright-report,/tmp/ --allow-sys=cpus,homedir,osRelease,uid --allow-run npm:playwright test"
+    },
+    "prettier:debug-check": {
+      "description": "Runs prettier on the code through Deno - --debug-check",
+      "command": "deno run --allow-env --allow-read=./,./.gitignore,./.prettierignore,./package.json,./node_modules --allow-write=./node_modules/.cache/prettier --allow-sys=cpus,uid npm:prettier . --debug-check"
+    },
+    "prettier:write": {
+      "description": "Runs prettier on the code through Deno - --write",
+      "command": "deno run --allow-env --allow-read=./,./.gitignore,./.prettierignore,./package.json,./node_modules --allow-write=./ --allow-sys=cpus,uid npm:prettier . --write"
+    },
+    "renovate:config-check": {
+      "description": "Runs Renovate config validator",
+      "command": "npx --yes --package renovate -- renovate-config-validator --strict"
+    },
+    "serve:dist": {
+      "description": "Serves the generated site",
+      "command": "deno run --allow-env --allow-read=./dist --allow-sys=networkInterfaces --allow-net=0.0.0.0:8080 npm:http-server dist --port 8080 --silent"
+    },
+    "stylelint:check": {
+      "description": "Runs stylelint on the codebase",
+      "command": "deno run --allow-env --allow-read --allow-write=.stylelintcache --allow-sys=cpus,gid,homedir,uid npm:stylelint --config ./stylelint.config.mjs \"**/*.css\""
+    },
+    "stylelint:fix": {
+      "description": "Runs stylelint on the codebase",
+      "command": "deno run --allow-env --allow-read --allow-write=./ --allow-sys=cpus,gid,homedir,uid npm:stylelint --config ./stylelint.config.mjs --fix \"**/*.css\""
+    },
+    "test:e2e": {
+      "description": "Runs end-to-end tests",
+      "command": "deno task playwright:test"
+    },
+    "update-deno": {
+      "description": "Fetches the latest Deno version and updates .deno-version and devcontainer.json",
+      "command": "deno run --allow-net=api.github.com --allow-read=.deno-version,./.devcontainer/devcontainer.json --allow-write=.deno-version,./.devcontainer/devcontainer.json scripts/update-deno.mts"
     }
   },
   "fmt": {
@@ -24,9 +105,7 @@
   },
   "lint": {
     "rules": {
-      "tags": [
-        "recommended"
-      ]
+      "tags": ["recommended"]
     }
   },
   "exclude": []
