Update linting rules and exclude additional directories from processing

--- a/deno.json
+++ b/deno.json
@@ -105,8 +105,15 @@
   },
   "lint": {
     "rules": {
-      "tags": ["recommended"]
+      "tags": ["recommended"],
+      "exclude": ["require-await"]
     }
   },
-  "exclude": []
+  "exclude": [
+    "build/",
+    "dist/",
+    "playwright-report/",
+    "test-results/"
+  ],
+  "nodeModulesDir": "auto"
 }
