--- a/deno.json
+++ b/deno.json
@@ -1,34 +1,34 @@
 {
   "imports": {
-    "@playwright/test": "npm:@playwright/test@1.53.1",
-    "@std/assert": "jsr:@std/assert@1.0.13",
-    "@std/fs": "jsr:@std/fs@1.0.18",
-    "@std/path": "jsr:@std/path@1.1.0",
-    "@std/testing": "jsr:@std/testing@1.0.14",
-    "@typescript-eslint/eslint-plugin": "npm:@typescript-eslint/eslint-plugin@8.34.1",
-    "@typescript-eslint/parser": "npm:@typescript-eslint/parser@8.34.1",
+    "@playwright/test": "npm:@playwright/test@1.57.0",
+    "@std/assert": "jsr:@std/assert@1.0.16",
+    "@std/fs": "jsr:@std/fs@1.0.21",
+    "@std/path": "jsr:@std/path@1.1.4",
+    "@std/testing": "jsr:@std/testing@1.0.16",
+    "@typescript-eslint/eslint-plugin": "npm:@typescript-eslint/eslint-plugin@8.51.0",
+    "@typescript-eslint/parser": "npm:@typescript-eslint/parser@8.51.0",
     "@vento/vento": "jsr:@vento/vento@1.14.0",
     "components/": "./src/components/",
-    "cssnano-preset-advanced": "npm:cssnano-preset-advanced@7.0.7",
-    "cssnano": "npm:cssnano@7.0.7",
-    "eslint-config-prettier": "npm:eslint-config-prettier@10.1.5",
+    "cssnano-preset-advanced": "npm:cssnano-preset-advanced@7.0.10",
+    "cssnano": "npm:cssnano@7.1.2",
+    "eslint-config-prettier": "npm:eslint-config-prettier@10.1.8",
     "eslint-plugin-import": "npm:eslint-plugin-import@2.32.0",
-    "eslint-plugin-jsdoc": "npm:eslint-plugin-jsdoc@51.2.1",
+    "eslint-plugin-jsdoc": "npm:eslint-plugin-jsdoc@61.5.0",
     "eslint-plugin-promise": "npm:eslint-plugin-promise@7.2.1",
-    "eslint-plugin-unicorn": "npm:eslint-plugin-unicorn@59.0.1",
-    "eslint": "npm:eslint@9.29.0",
-    "fast-check": "npm:fast-check@4.1.1",
-    "fast_xml_parser": "npm:fast-xml-parser@5.2.5",
+    "eslint-plugin-unicorn": "npm:eslint-plugin-unicorn@62.0.0",
+    "eslint": "npm:eslint@9.39.2",
+    "fast-check": "npm:fast-check@4.5.3",
+    "fast_xml_parser": "npm:fast-xml-parser@5.3.3",
     "http-server": "npm:http-server@14.1.1",
-    "jiti": "npm:jiti@2.4.2",
-    "playwright": "npm:playwright@1.53.1",
+    "jiti": "npm:jiti@2.6.1",
+    "playwright": "npm:playwright@1.57.0",
     "postcss": "npm:postcss@8.5.6",
-    "prettier": "npm:prettier@3.6.0",
+    "prettier": "npm:prettier@3.7.4",
     "scripts/": "./src/scripts/",
-    "stylelint-config-standard": "npm:stylelint-config-standard@38.0.0",
-    "stylelint": "npm:stylelint@16.21.0",
+    "stylelint-config-standard": "npm:stylelint-config-standard@39.0.1",
+    "stylelint": "npm:stylelint@16.26.1",
     "uglify-js": "npm:uglify-js@3.19.3",
-    "zod": "npm:zod@3.25.67"
+    "zod": "npm:zod@4.3.4"
   },
   "tasks": {
     "build": {
@@ -45,7 +45,7 @@
     },
     "eslint:check": {
       "description": "Runs ESLint on the codebase",
-      "command": "deno run --allow-env --allow-read --allow-write=./.eslintcache --allow-sys=cpus,homedir npm:eslint ."
+      "command": "deno run --allow-env --allow-read --allow-write=./.eslintcache --allow-sys=cpus,homedir npm:eslint --concurrency=auto ."
     },
     "git:pre-commit": {
       "description": "Updates and validadates the code as done in CI",
@@ -110,6 +110,6 @@
       "exclude": ["require-await"]
     }
   },
-  "exclude": ["build/", "dist/", "playwright-report/", "test-results/"],
+  "exclude": ["build/", "coverage/", "dist/", "node-modules/","playwright-report/", "test-results/"],
   "nodeModulesDir": "auto"
 }
