--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,3 +26,23 @@ updates:
       timezone: "Europe/London"
     open-pull-requests-limit: 500
 
+  - package-ecosystem: docker
+    directory: /.devcontainer
+    cooldown:
+      default-days: 7
+    schedule:
+      interval: "cron"
+      cronjob: "0 9 * * *"
+      timezone: "Europe/London"
+    open-pull-requests-limit: 500
+
+  - package-ecosystem: npm
+    directory: /
+    cooldown:
+      default-days: 7
+      semver-major-days: 30
+    schedule:
+      interval: "cron"
+      cronjob: "0 9 * * *"
+      timezone: "Europe/London"
+    open-pull-requests-limit: 500
