--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -57,7 +57,7 @@ jobs:
           deno-version: ${{ env.DENO_VERSION }}
 
       - name: Deno install
-        run: deno install .
+        run: deno install
 
       - name: Run Deno test
         run: deno test .
